2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c (set_up_databases)
	(db_interface_create) (tracker_db_manager_init)
	(tracker_db_manager_shutdown) (tracker_db_manager_get_db_interface)
	(tracker_db_manager_get_db_interface_content): Allow creating
	databases lazily, instead of creating them all on initialization.

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.c:
	* src/trackerd/tracker-db.c: 
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.[ch]: Removed more unused members from
	the Tracker struct.

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-main.[ch]:
	* src/trackerd/tracker-metadata.c: 
	* src/trackerd/tracker-utils.c: 
	* src/trackerd/tracker-watcher-inotify.c: Removed unused threading code.

2008-06-09  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-main.c: initialise_directories before
	tracker_db_manager_init. Removed second call to tracker_watcher-init.
	* src/trackerd/tracker-db.c: Fixed assert. Offset must be equal or
	greater than 0.

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.[ch]: Removed a lot of
	public API here because it is no longer needed. Simplified the way
	we set up TrackerDBInterface objects. Improved the logging. Added
	support for attaching all databases to one connection. Fixed the
	odd bug found. 

	* src/tracker-indexer/tracker-main.c: Initialise the database
	manager without attaching all databases.
	
	* src/trackerd/tracker-main.c:  Initialise the database manager
	with attach_all_dbs set to FALSE for now, setting this to TRUE
	causes problems when running the daemon with --reindex.
	
2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c
	(db_manager_row_to_field_def): Plug a leak.
